workspace/JavaPajeParser/src/br/ufrgs/inf/tlbellini/tcc/PajeParser.g4
grammar PajeParser;

//Parser Rules

@header{
	package br.ufrgs.inf.tlbellini.tcc;
}

paje: declarations events;

declarations: declaration+;
declaration: TK_EVENT_DEF_BEGIN event_name event_id TK_BREAK
             fields TK_EVENT_DEF_END TK_BREAK 
             ;

event_name:
    TK_PAJE_DEFINE_CONTAINER_TYPE  |
	TK_PAJE_DEFINE_VARIABLE_TYPE  |
	TK_PAJE_DEFINE_STATE_TYPE  |
	TK_PAJE_DEFINE_EVENT_TYPE  |
	TK_PAJE_DEFINE_LINK_TYPE  |
	TK_PAJE_DEFINE_ENTITY_VALUE  |
	TK_PAJE_CREATE_CONTAINER  |
	TK_PAJE_DESTROY_CONTAINER  |
	TK_PAJE_SET_VARIABLE  |
	TK_PAJE_ADD_VARIABLE  |
	TK_PAJE_SUB_VARIABLE  |
	TK_PAJE_SET_STATE  |
	TK_PAJE_PUSH_STATE  |
	TK_PAJE_POP_STATE  |
	TK_PAJE_RESET_STATE  |
	TK_PAJE_START_LINK  |
	TK_PAJE_END_LINK  |
	TK_PAJE_NEW_EVENT ;
event_id: TK_INT;
fields: field+ ;
field: TK_EVENT_DEF field_name field_type TK_BREAK;
field_name:
    TK_EVENT_DEF_ALIAS  |
	TK_EVENT_DEF_TYPE  |
	TK_EVENT_DEF_NAME  |
	TK_EVENT_DEF_COLOR  |
	TK_EVENT_DEF_START_CONTAINER_TYPE  |
	TK_EVENT_DEF_END_CONTAINER_TYPE  |
	TK_EVENT_DEF_CONTAINER  |
	TK_EVENT_DEF_TIME  |
	TK_EVENT_DEF_START_CONTAINER  |
	TK_EVENT_DEF_END_CONTAINER  |
	TK_EVENT_DEF_VALUE  |
	TK_EVENT_DEF_KEY  |
    TK_EVENT_DEF_LINE  |
    TK_EVENT_DEF_FILE  |
	TK_STRING ;
field_type:
TK_EVENT_DEF_FIELD_TYPE_STRING  |
TK_EVENT_DEF_FIELD_TYPE_FLOAT  |
TK_EVENT_DEF_FIELD_TYPE_DOUBLE  |
TK_EVENT_DEF_FIELD_TYPE_INT  |
TK_EVENT_DEF_FIELD_TYPE_HEX  |
TK_EVENT_DEF_FIELD_TYPE_DATE  |
TK_EVENT_DEF_FIELD_TYPE_COLOR ;

events: event+ ;
event: non_empty_event | empty_event;
non_empty_event: TK_INT arguments TK_BREAK;
empty_event: TK_BREAK;
arguments: argument+;
argument: TK_STRING | TK_FLOAT | TK_INT ;

//lexer
TK_BREAK: '\n' | '\r' |'\r\n';
SPACE: ' ' -> skip;
TAB: '\t' -> skip;
fragment DIGIT: [0-9];

COMMENT: '#' ~('\r' | '\n')* '\n' -> skip;

TK_EVENT_DEF: '%';
TK_EVENT_DEF_BEGIN: '%EventDef';

TK_EVENT_DEF_END: '%EndEventDef';

TK_PAJE_DEFINE_CONTAINER_TYPE: 'PajeDefineContainerType';
TK_PAJE_DEFINE_VARIABLE_TYPE: 'PajeDefineVariableType';
TK_PAJE_DEFINE_STATE_TYPE: 'PajeDefineStateType';
TK_PAJE_DEFINE_EVENT_TYPE: 'PajeDefineEventType';
TK_PAJE_DEFINE_LINK_TYPE:  'PajeDefineLinkType';
TK_PAJE_DEFINE_ENTITY_VALUE: 'PajeDefineEntityValue'; 

TK_PAJE_CREATE_CONTAINER: 'PajeCreateContainer';
TK_PAJE_DESTROY_CONTAINER: 'PajeDestroyContainer';

TK_PAJE_SET_VARIABLE: 'PajeSetVariable';
TK_PAJE_ADD_VARIABLE: 'PajeAddVariable';
TK_PAJE_SUB_VARIABLE: 'PajeSubVariable';

TK_PAJE_SET_STATE: 'PajeSetState';
TK_PAJE_PUSH_STATE: 'PajePushState';
TK_PAJE_POP_STATE: 'PajePopState';
TK_PAJE_RESET_STATE: 'PajeResetState';

TK_PAJE_START_LINK: 'PajeStartLink';
TK_PAJE_END_LINK: 'PajeEndLink';

TK_PAJE_NEW_EVENT: 'PajeNewEvent';

TK_EVENT_DEF_ALIAS: 'Alias';
TK_EVENT_DEF_TYPE: 'Type';
TK_EVENT_DEF_NAME: 'Name';
TK_EVENT_DEF_COLOR: 'Color';
TK_EVENT_DEF_START_CONTAINER_TYPE: 'StartContainerType';
TK_EVENT_DEF_END_CONTAINER_TYPE: 'EndContainerType';
TK_EVENT_DEF_CONTAINER: 'Container';
TK_EVENT_DEF_TIME: 'Time';
TK_EVENT_DEF_START_CONTAINER: 'StartContainer';
TK_EVENT_DEF_END_CONTAINER: 'EndContainer';
TK_EVENT_DEF_VALUE: 'Value';
TK_EVENT_DEF_KEY: 'Key';
TK_EVENT_DEF_LINE: 'Line';
TK_EVENT_DEF_FILE: 'File';

TK_EVENT_DEF_FIELD_TYPE_STRING: 'string';
TK_EVENT_DEF_FIELD_TYPE_FLOAT: 'float';
TK_EVENT_DEF_FIELD_TYPE_DOUBLE: 'double';
TK_EVENT_DEF_FIELD_TYPE_INT: 'int';
TK_EVENT_DEF_FIELD_TYPE_HEX: 'hex';
TK_EVENT_DEF_FIELD_TYPE_DATE:'date';
TK_EVENT_DEF_FIELD_TYPE_COLOR: 'color';


TK_INT: DIGIT+;
TK_FLOAT: DIGIT+'.'DIGIT+;
fragment LETTER: [a-zA-Z_-];
TK_STRING: '"' ('\\"'|.)*? '"' | LETTER+;
